--- a/CODE/Visualization.ipynb
+++ b/CODE/Visualization.ipynb
@@ -1143,6 +1143,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Exemple 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "####  Proposed model"
    ]
   },
@@ -1624,7 +1631,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Exemple 2"
+   ]
   },
   {
    "cell_type": "code",
