--- a/Planning du stage/main.tex
+++ b/Planning du stage/main.tex
@@ -55,6 +55,26 @@
     Jour 1 : \\\\
         - visionnage video: transport optimal et application [Gariel Peyré]\\
         - suite artice (sujet)\\
-        - téléchargement et apprehension du dataset "MovieLens" : Visualization.ipynb\\
+        - téléchargement et apprehension du dataset "MovieLens" : Visualization.ipynb\\\\
+    Jour 2 : \\\\
+        - vision de données\\
+        - création de certains exemples\\\\
+    Jour 3 : \\\\
+        - article (sujet)\\
+        - essaie d'adaptation datasets et codes\\\\
+    Jour 4 : \\\\
+        - tentative de création de matrice de coût avec les genres de films\\\\
+    Jour 5 : \\\\
+        - relecture de l'article\\
+        - recherche de méthodes de manipulations des tags genomes\\\\
 
+\section{Troisième semaine}
+
+    \textbf{Objectifs : }\newline\\
+    Continuer à lier et à comprendre, le fonctionnement des méthodes et leur manipulation. \\
+    Continuer le problème jouet\\
+    Procéssus un peu difficile à comprendre\\
+    .\newline\\
+    
+        
 \end{document}
